--- a/src/main/resources/templates/funding/funding-creater-info.html
+++ b/src/main/resources/templates/funding/funding-creater-info.html
@@ -370,7 +370,8 @@
                                     <li>
                                         <div class="buttonWrap">
                                             <button class="lineButton pdc-btn-l" color="grayEditor200">취소</button>
-                                            <button class="solidButton solidButton pdc-btn-l" disabled="" color="mainEditorP80"><span>등록</span>
+                                            <button class="solidButton-disable pdc-btn-l" disabled="" color="mainEditorP80">
+                                                <span>등록</span>
                                             </button>
                                         </div>
                                     </li>
