--- a/src/main/resources/templates/funding/funding-item.html
+++ b/src/main/resources/templates/funding/funding-item.html
@@ -329,8 +329,8 @@
                                                             </li>
                                                         </ul>
                                                         <div class="footer">
-                                                            <p><b>0</b>개의 아이템 선택</p><button class="cgEYQP pdc-btn-s"
-                                                                color="mainEditorP80"><span>
+                                                            <p><b>0</b>개의 아이템 선택</p>
+                                                            <button class="choiceButton pdc-btn-s" color="mainEditorP80"><span>
                                                                     <p type="l4" class="gheuiw">선택완료</p>
                                                                 </span></button>
                                                         </div>
@@ -339,8 +339,90 @@
                                             </div>
                                         </div>
                                         <div type="p4" color="#e53c41"
-                                            class="SelectWithSingle__ErrorMessage-sc-1eotg4s-0 msgStyle gpuBnE">
+                                            class="selectWithSigle msgStyle">
                                         </div>
+                                        <ul class="selectItem">
+                                            <li>
+                                                <section>
+                                                    <div class="itemInfoWrap">
+                                                        <div type="l2" class="itemDescription">ㅇㄴㅁㄹㄴㅁㄻㄴㄹㄴㅁ</div>
+                                                        <button type="button" value="0" class="toggleItemListButton">
+                                                            <p type="p4" color="#6D6D6D" class="Text-sc-1cqgvse-0 cVwjbN">주관식 옵션</p>
+                                                            <i>
+                                                                <div name="arrow1-down" class="iconSVG">
+                                                                    <svg viewBox="0 0 48 48">
+                                                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M45.4003 15.1217L23.9125 36L2.5247 15.1217C1.8251 14.4225 1.8251 13.2237 2.5247 12.5245C3.2243 11.8252 4.42362 11.8252 5.22317 12.5245L23.9125 30.8054L42.7019 12.5245C43.4015 11.8252 44.6008 11.8252 45.4003 12.5245C45.8001 12.8241 46 13.3236 46 13.8231C45.9001 14.3226 45.7002 14.8221 45.4003 15.1217Z"></path>
+                                                                    </svg>
+                                                                </div>
+                                                            </i>
+                                                    </button>
+                                                </div>
+                                                <div>
+                                                    <div class="stepperWrapper">
+                                                        <button type="button" disabled="">
+                                                            <div name="minus" class="iconSVG">
+                                                                <svg viewBox="0 0 48 48">
+                                                                    <path d="M6 24.1C6 22.9402 6.9402 22 8.1 22H39.9C41.0598 22 42 22.9402 42 24.1C42 25.2598 41.0598 26.2 39.9 26.2H8.1C6.9402 26.2 6 25.2598 6 24.1Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </button>
+                                                        <input type="number" value="1">
+                                                        <button type="button">
+                                                            <div name="plus" class="iconSVG">
+                                                                <svg viewBox="0 0 48 48">
+                                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M43.7104 21.8549H25.99V4.09524C25.99 2.89796 24.9945 2 23.9005 2C22.8054 2 21.81 2.89796 21.81 4.09524V21.9546H4.0905C2.89593 21.8549 2 22.8526 2 23.9501C2 25.0476 2.89593 26.0454 4.0905 26.0454H21.9095V43.9048C21.9095 45.0023 22.8054 46 23.999 46C25.095 46 26.0905 45.102 26.0905 43.9048V26.0454H43.9085C45.0045 26.0454 46 25.1474 46 23.9501C45.8009 22.8526 44.904 21.8549 43.7104 21.8549C43.7104 21.8549 43.81 21.8549 43.7104 21.8549Z">
+
+                                                                    </path>
+                                                                </svg>
+                                                            </div>
+                                                        </button>
+                                                    </div>
+                                                    <button class="solidButton_Bt removeButton_Bt fnt-p1" color="white" value="">
+                                                        <span>삭제</span>
+                                                    </button>
+                                                </div>
+                                            </section>
+                                            <ul class="item-Option">
+                                                <li>ㅁㅇㄴㄹㅇㅁㄴㄹㅇㄴㅁㄹ</li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <section>
+                                                <div class="itemInfoWrap">
+                                                    <div type="l2" class="itemDescription">이게 상품이야</div>
+                                                    <button type="button" value="1" class="toggleItemListButton">
+                                                        <p type="p4" color="#6D6D6D" class="Text-sc-1cqgvse-0 cVwjbN">주관식 옵션</p>
+                                                        <i>
+                                                            <div name="arrow1-down" class="iconSVG">
+                                                                <svg viewBox="0 0 48 48">
+                                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M45.4003 15.1217L23.9125 36L2.5247 15.1217C1.8251 14.4225 1.8251 13.2237 2.5247 12.5245C3.2243 11.8252 4.42362 11.8252 5.22317 12.5245L23.9125 30.8054L42.7019 12.5245C43.4015 11.8252 44.6008 11.8252 45.4003 12.5245C45.8001 12.8241 46 13.3236 46 13.8231C45.9001 14.3226 45.7002 14.8221 45.4003 15.1217Z">
+                                                                        
+                                                                    </path>
+                                                                </svg>
+                                                            </div>
+                                                        </i>
+                                                    </button>
+                                                </div>
+                                                <div>
+                                                    <div class="stepperWrapper">
+                                                        <button type="button" disabled="">
+                                                            <div name="minus" class="iconSVG"><svg viewBox="0 0 48 48">
+                                                                <path d="M6 24.1C6 22.9402 6.9402 22 8.1 22H39.9C41.0598 22 42 22.9402 42 24.1C42 25.2598 41.0598 26.2 39.9 26.2H8.1C6.9402 26.2 6 25.2598 6 24.1Z"></path></svg></div></button><input type="number" value="1"><button type="button"><div name="plus" class="iconSVG">
+                                                                    <svg viewBox="0 0 48 48">
+                                                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M43.7104 21.8549H25.99V4.09524C25.99 2.89796 24.9945 2 23.9005 2C22.8054 2 21.81 2.89796 21.81 4.09524V21.9546H4.0905C2.89593 21.8549 2 22.8526 2 23.9501C2 25.0476 2.89593 26.0454 4.0905 26.0454H21.9095V43.9048C21.9095 45.0023 22.8054 46 23.999 46C25.095 46 26.0905 45.102 26.0905 43.9048V26.0454H43.9085C45.0045 26.0454 46 25.1474 46 23.9501C45.8009 22.8526 44.904 21.8549 43.7104 21.8549C43.7104 21.8549 43.81 21.8549 43.7104 21.8549Z"></path>
+                                                                    </svg>
+                                                                </div>
+                                                            </button>
+                                                        </div>
+                                                        <button class="solidButton_Bt removeButton_Bt fnt-p1" color="white" value="e85811d7-7aae-4f1e-aba8-bab1107c2932">
+                                                            <span>삭제</span>
+                                                        </button>
+                                                    </div>
+                                                </section>
+                                                <ul class="item-Option"><li>이게 상품이야 이게 블락이야?</li>
+                                                </ul>
+                                            </li>
+                                        </ul>
                                     </section>
                                     <section class="sectionStyle">
                                         <div class="areaDiv"><button type="button"
@@ -682,33 +764,81 @@
 <script>
     const $selectionWrapper = $('.selectionWrapper');
     const $selectionOp = $('.selectionOp');
+    
     $selectionWrapper.click(function(){
         $selectionOp.css('display', 'block');
+        // $selectionOp.slideDown(700);
+
+        $('.choiceButton').on('click',()=>{
+             console.log("들어오냐?")
+            // $selectionOp.css(('display', 'none'));
+            $selectionOp.slideUp(400);
+})
     });
     const $checkBoxWrapper = $('li .checkBoxWrapper');
-    // $('li input').each((i, e)=>{
-    //     $checkBoxWrapper.eq(i).on('click', function(){
-    //     console.log($('.checkBoxWrapper').eq(i));
-    //     if($('li input').eq(i).is(':checked')){
-    //         $('.checkBoxWrapper span').eq(i).css('visibility', 'hidden');
-    //     }else{
-    //         $('.checkBoxWrapper span').eq(i).css('visibility', 'visible');
-    //     }
-        
-        
-    // })
-    // })
     
     function clickCheck() {
         $("input[type='checkbox']").each((i,e) => {
+            
             if($(e).is(":checked")) {
                     $('.change').eq(i).css('visibility', 'visible');
             }
             else {
                 $('.change').eq(i).css('visibility', 'hidden');
             }
+
+            
+             
+ 
+                    
         })
     }
+
+    $(e).eq(i).on("change",()=>{
+            let number = parseInt($('.footer p b').text());
+            let result =0;
+            
+
+                if($(e).eq(i).is(":checked")){
+                    
+                    result = ++(number);
+                    console.log($(this).eq(i));
+                    // $('.footer p b').text(++number)
+                    // $('.footer p b').text(++result)
+                }else{
+                    result = --(number); 
+                    // $('.footer p b').text(--number)
+                    // $('.footer p b').text(--result)
+                }
+                $('.footer p b').text(result)
+                
+                //$wrapperInputs.on("blur", function () {
+                // let i = $wrapperInputs.index($(this));
+                // let value = $(this).val();
+
+                    
+                 
+             })
+
+                        //  $(e).eq(i).on("change",()=>{
+            //         let number = $('.footer p b').text();
+            //         if(!($(e).eq(i).is(":checked"))){
+            //             $('.footer p b').text(--(parseInt(number)))
+            //         }
+                    
+            //  })
+                // if($(e).eq(i).is(":checked") == true){
+                //     let text = 0;
+                //     $('.footer p b').text(++text)
+                // }
+
+
+
+                // .changeSpan, .checkBoxSpan
+
+    console.log($('.selectItem li'));
+
+
     
     
     
