--- a/src/main/resources/templates/funding/funding-list.html
+++ b/src/main/resources/templates/funding/funding-list.html
@@ -118,7 +118,7 @@
                                                 </div>
                                                 <span class="rest-day">20일 남음</span>
                                             </div>
-                                            <div class="percentByRed"></div>
+                                            <div class="percentByRed"><div class="percentBar"></div></div>
                                         </div>
                                     </div>
                                 </div>
@@ -155,7 +155,7 @@
                                                 </div>
                                                 <span class="rest-day">20일 남음</span>
                                             </div>
-                                            <div class="percentByRed"></div>
+                                            <div class="percentByRed"><div class="percentBar"></div></div>
                                         </div>
                                     </div>
                                 </div>
@@ -192,7 +192,7 @@
                                                 </div>
                                                 <span class="rest-day">20일 남음</span>
                                             </div>
-                                            <div class="percentByRed"></div>
+                                            <div class="percentByRed"><div class="percentBar"></div></div>
                                         </div>
                                     </div>
                                 </div>
@@ -229,7 +229,7 @@
                                                 </div>
                                                 <span class="rest-day">20일 남음</span>
                                             </div>
-                                            <div class="percentByRed"></div>
+                                            <div class="percentByRed"><div class="percentBar"></div></div>
                                         </div>
                                     </div>
                                 </div>
@@ -266,7 +266,7 @@
                                                 </div>
                                                 <span class="rest-day">20일 남음</span>
                                             </div>
-                                            <div class="percentByRed"></div>
+                                            <div class="percentByRed"><div class="percentBar"></div></div>
                                         </div>
                                     </div>
                                 </div>
@@ -303,7 +303,7 @@
                                                 </div>
                                                 <span class="rest-day">20일 남음</span>
                                             </div>
-                                            <div class="percentByRed"></div>
+                                            <div class="percentByRed"><div class="percentBar"></div></div>
                                         </div>
                                     </div>
                                 </div>
@@ -340,7 +340,7 @@
                                                 </div>
                                                 <span class="rest-day">20일 남음</span>
                                             </div>
-                                            <div class="percentByRed"></div>
+                                            <div class="percentByRed"><div class="percentBar"></div></div>
                                         </div>
                                     </div>
                                 </div>
@@ -377,155 +377,10 @@
                                                 </div>
                                                 <span class="rest-day">20일 남음</span>
                                             </div>
-                                            <div class="percentByRed"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="listByinfinity">
-                                <div></div>
-                                <div class="project-card project-card">
-                                    <div></div>
-                                    <div class="CardOpx link-wrapper">
-                                        <div class="imgStyleBox">
-                                            <div class="image-wrapper">
-                                                <a href=""></a>
-                                                <div class="  linkByButoon">
-                                                    <button type="button" class=" buttonByLink">
-                                                        <span>좋아요</span>
-                                                    </button>
-                                                </div>
+                                            <div class="percentByRed">
+                                                <div class="percentBar"></div>
                                             </div>
-                                        </div>
-                                        <div class=" styleByInfoBox">
-                                            <dl>
-                                                <dd class="project-sub-info">
-                                                    <span><a href="">캐릭터 · 굿즈</a></span>
-                                                    <span><a href="">아이돌룩(idolllook)</a></span>
-                                                </dd>
-                                                <dt><a href="">토심이 토뭉이 하고 싶은거 다 해! &lt;봉제 인형&amp;파우치&gt;</a></dt>
-                                                <dd class="project-desc">분홍색 볼의 사랑스러운 토끼 토심이, 귀엽고 다정 다감한 강아지 토뭉이의 인형과 파우치</dd>
-                                            </dl>
-                                            <div class="projectCard2 projectCard1">
-                                                <div>
-                                                    <span class="fundingState">1373%</span>
-                                                    <input class="inputHidden" type="hidden" value="">
-                                                    <span class="funding-amount"><em>68,676,002</em>원</span>
-                                                </div>
-                                                <span class="rest-day">20일 남음</span>
                                             </div>
-                                            <div class="percentByRed"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="listByinfinity">
-                                <div></div>
-                                <div class="project-card project-card">
-                                    <div></div>
-                                    <div class="CardOpx link-wrapper">
-                                        <div class="imgStyleBox">
-                                            <div class="image-wrapper">
-                                                <a href=""></a>
-                                                <div class="  linkByButoon">
-                                                    <button type="button" class=" buttonByLink">
-                                                        <span>좋아요</span>
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class=" styleByInfoBox">
-                                            <dl>
-                                                <dd class="project-sub-info">
-                                                    <span><a href="">캐릭터 · 굿즈</a></span>
-                                                    <span><a href="">아이돌룩(idolllook)</a></span>
-                                                </dd>
-                                                <dt><a href="">토심이 토뭉이 하고 싶은거 다 해! &lt;봉제 인형&amp;파우치&gt;</a></dt>
-                                                <dd class="project-desc">분홍색 볼의 사랑스러운 토끼 토심이, 귀엽고 다정 다감한 강아지 토뭉이의 인형과 파우치</dd>
-                                            </dl>
-                                            <div class="projectCard2 projectCard1">
-                                                <div>
-                                                    <span class="fundingState">1373%</span>
-                                                    <input class="inputHidden" type="hidden" value="">
-                                                    <span class="funding-amount"><em>68,676,002</em>원</span>
-                                                </div>
-                                                <span class="rest-day">20일 남음</span>
-                                            </div>
-                                            <div class="percentByRed"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="listByinfinity">
-                                <div></div>
-                                <div class="project-card project-card">
-                                    <div></div>
-                                    <div class="CardOpx link-wrapper">
-                                        <div class="imgStyleBox">
-                                            <div class="image-wrapper">
-                                                <a href=""></a>
-                                                <div class="  linkByButoon">
-                                                    <button type="button" class=" buttonByLink">
-                                                        <span>좋아요</span>
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class=" styleByInfoBox">
-                                            <dl>
-                                                <dd class="project-sub-info">
-                                                    <span><a href="">캐릭터 · 굿즈</a></span>
-                                                    <span><a href="">아이돌룩(idolllook)</a></span>
-                                                </dd>
-                                                <dt><a href="">토심이 토뭉이 하고 싶은거 다 해! &lt;봉제 인형&amp;파우치&gt;</a></dt>
-                                                <dd class="project-desc">분홍색 볼의 사랑스러운 토끼 토심이, 귀엽고 다정 다감한 강아지 토뭉이의 인형과 파우치</dd>
-                                            </dl>
-                                            <div class="projectCard2 projectCard1">
-                                                <div>
-                                                    <span class="fundingState">1373%</span>
-                                                    <input class="inputHidden" type="hidden" value="">
-                                                    <span class="funding-amount"><em>68,676,002</em>원</span>
-                                                </div>
-                                                <span class="rest-day">20일 남음</span>
-                                            </div>
-                                            <div class="percentBarpercentByRed"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="listByinfinity">
-                                <div></div>
-                                <div class="project-card">
-                                    <div></div>
-                                    <div class="CardOpx link-wrapper">
-                                        <div class="imgStyleBox">
-                                            <div class="image-wrapper">
-                                                <a href=""></a>
-                                                <div class="linkByButoon linkByButoon">
-                                                    <button type="button" class="buttonByLink">
-                                                        <span>좋아요</span>
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="styleByInfoBox">
-                                            <dl>
-                                                <dd class="project-sub-info">
-                                                    <span><a href="">캐릭터 · 굿즈</a></span>
-                                                    <span><a href="">아이돌룩(idolllook)</a></span>
-                                                </dd>
-                                                <dt><a href="">토심이 토뭉이 하고 싶은거 다 해! &lt;봉제 인형&amp;파우치&gt;</a></dt>
-                                                <dd class="project-desc">분홍색 볼의 사랑스러운 토끼 토심이, 귀엽고 다정 다감한 강아지 토뭉이의 인형과 파우치</dd>
-                                            </dl>
-                                            <div class="projectCard2 projectCard1">
-                                                <div>
-                                                    <span class="fundingState">1373%</span>
-                                                    <input class="inputHidden" type="hidden" value="">
-                                                    <span class="funding-amount"><em>68,676,002</em>원</span>
-                                                </div>
-                                                <span class="rest-day">20일 남음</span>
-                                            </div>
-                                            <div class="percentByRed"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -565,13 +420,30 @@
             $('.inputHidden').eq(i).change(function(){
                 let $percent = $('inputHidden').text($fundingState1.eq(i));
                 console.log($percent);
-                  $('.percentByRed').eq(i).css('width', $percent);
+                  $('.percentBar').eq(i).css('width', $percent);
             })
-            
-
-            
+                        
         })
+        })
+
+    $(document).ready(function() {
+        console.log($fundingState2.length);
+        for(var i=0; i < $fundingState2.length; i++){
         
-    })
+            console.log("들어오나");
+            console.log($fundingState1.eq(i));
+        }
+    });
+    
+
+
+//   let test = "20%";
+//   $('.percentByRed::after').css('content', "''");
+//   $('.percentByRed::after').css('width', '20%');
+//   $('.percentByRed').css('width', '120%');
+// });
+
+
+
 </script>
 </html>
