--- a/src/main/resources/static/css/funding/funding.css
+++ b/src/main/resources/static/css/funding/funding.css
@@ -1380,9 +1380,55 @@ input {
     margin-left: 12px;
     font-weight: 500;
 }
+
+.solidButton {
+    cursor: pointer;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    height: 40px;
+    white-space: nowrap;
+    border-radius: 1px;
+    margin: 0px;
+    border: 0px;
+    outline: none;
+    font-weight: normal;
+    box-sizing: border-box;
+    padding: 0px 16px;
+    background-color: rgb(248, 100, 83);
+    color: rgb(255, 255, 255);
+}
+
+
 .solidButton span {
+    color: rgb(255, 255, 255);
+}
+.solidButton-disable span {
     color: rgb(158, 158, 158);
 }
+.solidButton-disable {
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    height: 40px;
+    white-space: nowrap;
+    border-radius: 1px;
+    margin: 0px;
+    border: 0px;
+    outline: none;
+    font-weight: normal;
+    box-sizing: border-box;
+    padding: 0px 16px;
+    color: rgb(255, 255, 255);
+    cursor: auto;
+    pointer-events: none;
+    background-color: rgb(228, 228, 228);
+}
+
 .selectWithOp {
     width: 100%;
     max-height: 500px;
